--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -1,8 +1,8 @@
-name: Build and push to Docker Hub as outlandish/wordpress-dev:latest
+name: Build and push to Docker Hub as outlandish/wordpress-dev:php8.1
 
 on:
   push:
-    branches: [master]
+    branches: [master, php8.1]
   schedule:
     - cron: '17 3 * * *'
 
@@ -25,4 +25,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: outlandish/wordpress-dev:latest
+          tags: outlandish/wordpress-dev:php8.1
