--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -1,4 +1,4 @@
-name: Build and push to Docker Hub as outlandish/wordpress-dev:php8.1
+name: Build and push to Docker Hub as outlandish/wordpress-dev:8.1
 
 on:
   push:
@@ -25,4 +25,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: outlandish/wordpress-dev:php8.1
+          tags: outlandish/wordpress-dev:8.1
